Fix spacing between span elements in store-item

--- a/main.css
+++ b/main.css
@@ -16,17 +16,18 @@ header {
 main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    width: min(100%, 1100px);
+    width: min(100%, 1200px);
     margin: 0 auto;
     gap: 20px;
+    grid-auto-rows: 35em;
 }
+
 .store-item {
     display: flex;
     flex-wrap: wrap;
     background-color: #1e1e1e;
     border-radius: 10px;
     overflow: hidden;
-    height: 27em;
     justify-content: center;
 }
 
@@ -43,7 +44,21 @@ main {
 }
 
 .store-item span {
-    flex-basis: 29%;
+    display: inline-block;
     color: #f1f1f1;
     margin-bottom: 10px;
+}
+
+.store-item > span:first-of-type,
+.store-item > span:nth-of-type(2) {
+    flex-basis: calc(25% - 15px);
+}
+
+.store-item > span:nth-of-type(2) {
+    text-align: right;
+}
+
+.store-item > span:last-of-type {
+    flex-basis: calc(50% - 15px);
+    text-align: right;
 }
